# qsbitcoin

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DevNotesTasks.md  FEE_REMOVAL_SUMMARY.md  P2WPKH_WITNESS_EXAMPLES.md  QSBITCOIN_IMPLEMENTATION_STATUS.md  QSBITCOIN_PLAN.md  QSBITCOIN_TASKS.md  QSBITCOIN_TESTNET_SETUP.md  QSTESTNET_BOOTSTRAP.md  QSTESTNET_MINING.md  QUANTUM_DESCRIPTOR_INTEGRATION.md  README.md  Spec.md  gdb_commands.txt  install-dev-deps.sh  monitor_qstestnet_mining.sh  quantum_addresses_testnet.md  quantum_implementation_summary.md  quantum_regtest_results.md  start_qstestnet.sh  start_qstestnet_mining.sh  test_addresses.txt  test_liboqs_slhdsa_only  test_liboqs_slhdsa_only.cpp  test_oqs_wrapper.cpp  test_quantum_basic.sh  test_quantum_comprehensive.sh  test_quantum_full.sh  test_quantum_gui.sh  test_quantum_send.sh  test_quantum_simple.sh  test_quantum_spend.sh  test_quantum_summary.sh  test_quantum_utxo.sh  test_quantum_utxo_simple.sh  test_slhdsa_crash.cpp  test_slhdsa_direct  (+3 more)
archive/: Archive1_PLAN.md  Archive1_TASKS.md
cmake/modules/: FindOQS.cmake
contrib/seeds/: nodes_qstestnet.txt
src/: CMakeLists.txt  bitcoin-cli.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  core_read.cpp  deploymentinfo.cpp  key_io.cpp  key_io.h  quantum_address.cpp  quantum_address.h  validation.cpp
src/common/: args.cpp  signmessage.cpp
src/consensus/: params.h
src/crypto/: CMakeLists.txt  ecdsa_scheme.cpp  ecdsa_scheme.h  mldsa_scheme.cpp  mldsa_scheme.h  oqs_wrapper.cpp  oqs_wrapper.h  quantum_hd.cpp  quantum_hd.h  quantum_key.cpp  quantum_key.h  quantum_key_io.cpp  quantum_key_io.h  signature_scheme.cpp  signature_scheme.h  slhdsa_scheme.cpp  slhdsa_scheme.h
src/interfaces/: wallet.h
src/kernel/: chainparams.cpp  chainparams.h
src/policy/: policy.cpp  policy.h  quantum_policy.cpp  quantum_policy.h
src/qt/: addresstablemodel.cpp  addresstablemodel.h  guiconstants.h  guiutil.cpp  networkstyle.cpp  receivecoinsdialog.cpp  signverifymessagedialog.cpp  transactiondesc.cpp
src/rpc/: client.cpp  fees.cpp  rawtransaction_util.cpp
src/script/: descriptor.cpp  interpreter.cpp  interpreter.h  quantum_descriptor.h  quantum_sigchecker.cpp  quantum_sigchecker.h  quantum_signature.cpp  quantum_signature.h  quantum_witness.cpp  quantum_witness.h  script.cpp  script.h  script_error.cpp  script_error.h  sign.cpp  signingprovider.cpp  signingprovider.h
src/test/: CMakeLists.txt  debug_quantum_push.cpp  liboqs_tests.cpp  qs_signature_checker_tests.cpp  quantum_activation_tests.cpp  quantum_address_generation_test.cpp  quantum_address_tests.cpp  quantum_coinselection_tests.cpp  quantum_comprehensive_tests.cpp  quantum_consensus_tests.cpp  quantum_crash_test.cpp  quantum_debug_test.cpp  quantum_descriptor_tests.cpp  quantum_fee_tests.cpp  quantum_hd_tests.cpp  quantum_key_io_tests.cpp  quantum_key_tests.cpp  quantum_policy_edge_cases_test.cpp  quantum_push_size_tests.cpp  quantum_rpc_tests.cpp  quantum_simple_descriptor_test.cpp  quantum_softfork_tests.cpp  quantum_transaction_tests.cpp  quantum_wallet_encryption_tests.cpp  quantum_wallet_tests.cpp  quantum_witness_corruption_tests.cpp  quantum_witness_validation_test.cpp  script_quantum_tests.cpp  script_quantum_tests_fixed.cpp  script_quantum_tests_simple.cpp  signature_scheme_tests.cpp  simple_quantum_test.cpp  transaction_tests.cpp
src/util/: chaintype.cpp  chaintype.h
src/wallet/: CMakeLists.txt  crypter.cpp  crypter.h  interfaces.cpp  quantum_descriptor_util.cpp  quantum_descriptor_util.h  quantum_keystore.cpp  quantum_keystore.h  quantum_scriptpubkeyman.cpp  quantum_scriptpubkeyman.h  quantum_signingprovider.h  quantum_wallet_setup.cpp  quantum_wallet_setup.h  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.h
(+16 files in other folders)
